2024-09-05T12:41:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10720557917 # 511
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-05
* notice: last 14d: unq all: 26 33
* notice: prev accum: outdated-unq outdated-all / unq all: 3689 8253 / 3719 8284
* notice: next accum: outdated-unq outdated-all / unq all: 3689 8253 / 3721 8286
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-09-05]

2024-09-05T01:39:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10712343344 # 510
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-05
* notice: last 14d: unq all: 25 31
* notice: prev accum: outdated-unq outdated-all / unq all: 3689 8253 / 3718 8283
* notice: next accum: outdated-unq outdated-all / unq all: 3689 8253 / 3719 8284
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-04]

2024-09-04T01:39:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10693565819 # 508
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-04
* notice: last 14d: unq all: 24 30
* notice: prev accum: outdated-unq outdated-all / unq all: 3689 8253 / 3715 8280
* notice: next accum: outdated-unq outdated-all / unq all: 3689 8253 / 3718 8283
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +4 +4 -0 -0 / 4 4
* notice: removed / changed dates: [] / [2024-09-03]

2024-09-03T12:40:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10683117905 # 507