@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-05T12:41:12Z",
-  "count_outdated" : 8253,
-  "uniques_outdated" : 3689,
-  "count" : 8286,
-  "uniques" : 3721,
+  "timestamp" : "2024-09-06T12:39:50Z",
+  "count_outdated" : 8257,
+  "uniques_outdated" : 3693,
+  "count" : 8287,
+  "uniques" : 3722,
   "clones" : [
-    {
-      "timestamp": "2024-08-23T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 3, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 4,
-      "uniques_minmax": [ 3, 4 ],
-      "uniques_decinc": [ 0, 4 ]
-    },
     {
       "timestamp": "2024-08-24T00:00:00Z",
       "count": 1,
@@ -121,6 +112,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-09-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
