@@ -1,12 +1,7 @@
 {
-  "count": 33,
-  "uniques": 26,
+  "count": 30,
+  "uniques": 25,
   "clones": [
-    {
-      "timestamp": "2024-08-23T00:00:00Z",
-      "count": 4,
-      "uniques": 4
-    },
     {
       "timestamp": "2024-08-24T00:00:00Z",
       "count": 1,
@@ -66,6 +61,11 @@
       "timestamp": "2024-09-05T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-09-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
